fix: text overflowing outside of article content box #218

--- a/src/styles/components/article.scss
+++ b/src/styles/components/article.scss
@@ -191,6 +191,7 @@
 
   p {
     @apply my-6;
+    overflow-wrap: break-word;
   }
 
   ul {
